--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,10 @@
       "ecmaVersion": 2018
     },
     "rules": {
+      "no-use-before-define": ["error", {
+        "functions": false,
+        "classes": true,
+        "variables": true
+        }]
     }
   }
